added the clicking function to the trending voices, styling not ready yet

--- a/prototype.html
+++ b/prototype.html
@@ -371,33 +371,49 @@
 	
 		<!--<p class="artTitle">'Blue magic': Algeria opens 'Facebook addiction' clinic </p>-->
 		<h2 id="title" class="main-title">'Blue magic': Algeria opens 'Facebook addiction' clinic </h2>
+
+ <div class="gallery">
+        <!-- for more on HTML5 figure, check: http://html5doctor.com/the-figure-figcaption-elements/ -->
+        <figure class="active-trend">
+            <img src="images/voice-1.png" alt=""/>
+        </figure>
+        <figure>
+            <img src="images/voice-2.png" alt=""/>
+            </figure>
+        <figure>
+            <img src="images/voice-3.png" alt=""/>
+          </figure>
+    </div>
+    <!-- new elements (galleru navigation) -->
+    <div id="trending-voices-navig">
+       <div id="tv-left" class="tv-navig" ><i class="fa fa-angle-left" aria-hidden="true"></i>
+</div>
+        <div id="tv-right" class="tv-navig" ><i class="fa fa-angle-right" aria-hidden="true"></i>
+    </div>
+    </div>
+
 	
-		<div id="Trending-Voice-Container">
+		<!-- <div id="Trending-Voice-Container">
 	
 			<hr class="lines">
 			<h1 class="subheader">Trending Voices</h1>
-			<!--<input type="checkbox" id="button">
-			<label class="trending-voice-button-left" for="button"><</label>-->
+			<input type="checkbox" id="button">
+			<label class="trending-voice-button-left" for="button"><</label>
 			<div id="container-div-trending-voices">
 			    <div id="trending-voices-div" >
 				<img src="images/voice-1.png" alt="TrendingDiscussion">
 				<img src="images/voice-2.png" alt="TrendingDiscussion">
 				<img src="images/voice-3.png" alt="TrendingDiscussion">
 				<img src="images/voice-2.png" alt="TrendingDiscussion">
-			    </div> <!-- #trending-voices-div -->
-			</div><!-- #container-div-trending-voices-->
+			    </div> <!-- #trending-voices-div 
+			</div>< #container-div-trending-voices
 			<!--<input type="checkbox" id="button">
 			<label class="trending-voice-button-right" for="button">></label>-->
 			
 			<!-- right left arrows -->
-			<div id="trending-voices-navig">
-				<div id="tv-left" class="tv-navig" ><i class="fa fa-angle-left" aria-hidden="true"></i>
-</div>
-				<div id="tv-right" class="tv-navig" ><i class="fa fa-angle-right" aria-hidden="true"></i>
-</div>
-			</div>
+				
 			
-		</div><!-- Trending-Voice-Container -->
+	<!--	</div> Trending-Voice-Container -->
 	
 		<div id="discussion-poll">
 			<hr class="lines">
