--- a/prototype.html
+++ b/prototype.html
@@ -218,7 +218,7 @@
 					<li><a href="#where">Where</a></li>
 				</ul>
 				<div class="tabUpdContent" id="what">
-					<span>T.Adams</span> <span>AI</span> <span>Tech</span> <span>Culture</span> <span>Science</span> <span>N.Bostrom</span> <span id= "more">More...</span>
+					<span>T.Adams</span> <span>AI</span> <span>Tech</span> <span>Culture</span> <span>Science</span> <span>Politics</span> <span id= "more">More...</span>
 					<div class="NewsUpdate-check">
 						<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 						<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
