adjusted the styling in the comments page i.e. made it more coherent

--- a/prototype.html
+++ b/prototype.html
@@ -378,7 +378,7 @@
 		<h2 id="title" class="main-title">Artificial intelligence: ‘We’re like children playing with a bomb’</h2>
 
       <hr class="lines">
-			<h1 class="subheader">Trending Voices</h1>
+			<h1 class="subheader">TRENDING VOICES</h1>
 
  <div class="gallery">
         <!-- for more on HTML5 figure, check: http://html5doctor.com/the-figure-figcaption-elements/ -->
@@ -392,25 +392,34 @@
             <img src="images/voice-3.png" alt=""/>
           </figure>
     </div>
-    <!-- new elements (galleru navigation) -->
+    <!-- new elements (gallery navigation) -->
     <div id="trending-voices-navig">
-       <div id="tv-left" class="tv-navig" ><i class="fa fa-angle-left" aria-hidden="true"></i>
-</div>
+        <div id="tv-left" class="tv-navig" ><i class="fa fa-angle-left" aria-hidden="true"></i>
+        </div>
         <div id="tv-right" class="tv-navig" ><i class="fa fa-angle-right" aria-hidden="true"></i>
-    </div>
+        </div>
     </div>
 	
 		<div id="discussion-poll">
 			<hr class="lines">
-			<h2 class="subheader">Poll results</h2>
+			<h2 class="subheader">POLL RESULTS</h2>
 			<span id="question">Do you think that concerns about AI will take over from global warming as a more imminent threat any time soon?</span>
 			<div class="discussion-results" id="discussion-Yes" >
 				<p class="left">67% No</p>
 				<p class="right"> 33% Yes</p>
 			</div>
 		</div><!-- #discussion-poll -->
+
+ <div id="comments-container">
+		
+			<hr class="lines">
+			<h2 class="comments-header">COMMENTS (62)</h2>
+			<span class="comments-header"> | Recent</span>
+			<span class="comments-header" id="top">Top </span>
+			
 	
 		<img id="comments-img" src="images/commentsonly.png" alt="CommentsDiscussion">
+	</div> <!-- End #comments-container>	-->
 	
 	
 	
