added new related articles img + styled subheaders

--- a/prototype.html
+++ b/prototype.html
@@ -195,6 +195,7 @@
 						</span>
 						<!--Yes--></span>
 					</div>
+
 					<div class="results" id="Yes" >
 						<p class="left">67% No</p>
 						<p class="right"> 33% Yes</p>
@@ -202,15 +203,16 @@
 					<input id="submit-button" type="submit" name="submit" value="Submit"></input>
 			</div><!-- #poll-->
 
-			<div id="relatedArticles">
+			<div id="relatedArticles-container">
 			<hr id="related-lines">
+			<h2 class="rel-subheader">RELATED ARTICLES</h2>
 				<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">
 			</div><!-- #relatedArticles -->
 
 
 			<div id="newsUpdate">
 				<hr class="linesUpdate">
-				<span class="subheaderUpdate">Get Personalized News Updates</span>
+				<span class="subheaderUpdate">GET PERSONALIZED NEWS UPDATES</span>
 				<p id="newUpdateText">Select your preferred topics, the day you would like to receive the updates, and in which medium.</p>
 				<ul class="updateTabs">
 					<li class="selected"><a href="#what">What</a></li>
@@ -265,7 +267,7 @@
 								<path  style="stroke-width:0px;fill:white" d="m285.92,382.89c12.431,2.486,22.377,4.973,34.808,4.973,29.835,0,52.212-12.431,67.13-34.808,7.459-14.918,9.945-27.349,7.459-39.781-4.973-14.918-17.404-22.377-19.89-24.863l-37.294-19.89c-4.973-2.486-9.945-4.973-14.918-4.973-24.863,0-39.781,27.349-39.781,27.349s-2.486,2.486-7.459,2.486h-2.486c-37.294-12.431-64.643-47.239-77.075-64.643l-2.486-2.486c-9.945-7.459-12.431-7.459-2.486-17.404,19.89-17.404,14.918-37.294,9.945-44.753l-24.863-59.671c-2.486-4.973-12.431-12.431-22.377-12.431-12.431,0-27.349,7.459-44.753,24.863-42.267,42.267-9.945,106.91-9.945,106.91,47.239,124.31,181.5,156.64,186.47,159.12z"/>
 							</svg>
 						</span>
-						<button class="signUpdate">Sign up</button>
+						<button class="signUpdate">SIGN UP</button>
 					</div><!-- .tabUpdContent #where -->
 			  </div>
 		</div><!-- belowArticle-->
